# YTDL

./: .gitignore  CONTRIBUTING.md  LICENSE  README-macOS.md  README-share.txt  README.md  RELEASE.md  build_macos_app.command  diagnose_macos_app.command  install.bat  install.command  main.py  package.ps1  package_macos.ps1  package_macos.sh  pyproject.toml  requirements.txt  run.bat  run.command  run.vbs  set_shortcut_icon.bat  update_and_build_mac.command
.github/: FUNDING.yml
src/: __init__.py  ytdl_gui.py
tools/: brand_flet_runtime.py  install_deno.ps1  install_deno_macos.sh
