[project]
name = "ytdl"
version = "1.0.0"
description = "YouTube downloader GUI"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Packaged apps use Flet's embedded Flutter host. Including the "all"
    # extra also bundles flet-desktop and launches a second, duplicate window.
    "flet==0.85.3",
    "imageio-ffmpeg",
    "yt-dlp",
]

[tool.flet]
product = "YTDL"
company = "YTDL"
copyright = "YTDL"
org = "app.local"
bundle_id = "app.local.ytdl"
build_number = 1

[tool.flet.app]
path = "."
module = "main"
exclude = [
    ".agents",
    ".codex",
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "cache",
    "dist",
    "downloads",
    "runtime",
]

[tool.flet.macos]
artifact = "YTDL"

# Keep Flet's complete desktop defaults. In particular, the embedded Python
# runtime needs allow-jit and the local Flet transport needs network.server.
[tool.flet.macos.entitlement]
"com.apple.security.app-sandbox" = false
"com.apple.security.cs.allow-jit" = true
"com.apple.security.network.client" = true
"com.apple.security.network.server" = true
"com.apple.security.files.user-selected.read-write" = true
